<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareLocation">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="4dp"
        android:text="@string/addloc" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="162dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-34dp"
        android:layout_marginRight="-34dp"
        android:layout_marginBottom="93dp"
        android:layout_toStartOf="@+id/button4"
        android:layout_toLeftOf="@+id/button4"
        android:text="@string/show" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="62dp"
        android:text="@string/pname" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="119dp"
        android:text="@string/lat" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignLeft="@id/button3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="155dp"
        android:text="@string/log" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="place name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-73dp"
        android:layout_marginRight="-73dp"
        android:layout_toStartOf="@+id/button4"
        android:layout_toLeftOf="@+id/button4"
        android:text=" " />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="-85dp"
        android:layout_marginRight="-85dp"
        android:layout_toStartOf="@+id/button4"
        android:layout_toLeftOf="@+id/button4"
        android:text=" " />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="198dp"
        android:text="@string/keyid" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="183dp"
        android:layout_toEndOf="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="ID" />

</RelativeLayout>